---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 18. 12. 2017
  Added:
    - New warning for incompatibilities when Picker Tweaks mod is installed
  Changed:
    - Improved handling when mods add signal colours that may conflict with those already added by Dectorio
    - Improved notifications for conflicting mods with more information on how to resolve the conflict
  Removed:
    - Markdown version of CHANGELOG.md in favour of Factorio style changelog.txt
---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 15. 12. 2017
  Added:
    - Factorio 0.16 support
    - New Painted concrete textures to match new vanilla Concrete style
    - Painted concrete floorings now support high resolution graphics
    - New landscaping items for placing all the new base game terrain types
    - Graphics support for placing stone and concrete walls alongside water (others to come in a future update)
    - Support for new in-game changelog feature
    - More robust technology recipe-unlock handling to improve compatibility with third-party mods
    - Support for migrating Fire hazard concrete from Color Coding mod to Emergency concrete
  Removed:
    - Factorio 0.15 support - use Dectorio v0.7.6 when playing 0.15 saves
    - Removed support for Water Fix mod as the base game now supports placing tiles alongside water
    - Redundant assets to reduce overall mod size
  Locales:
    - Updated German translations
---------------------------------------------------------------------------------------------------
Version: 0.7.6
Date: 01. 12. 2017
  Added:
    - New setting for toggling whether ores can be placed as gravel
    - Dectorio floorings can now be placed adjacent to water when Water Fix mod is installed
  Bugfixes:
    - Fixed that water tiles were not available for crafting when playing with Alien Biomes
  Locales: