@@ -90,6 +90,10 @@ dect-paint-defect=Defect concrete
 dect-paint-operations=Operations concrete
 dect-wood-floor=Wooden floorboards
 dect-small-lamp-glow=Glowing lamp
+dect-stone-gravel=Stone Gravel
+dect-iron-ore-gravel=Iron Gravel
+dect-copper-ore-gravel=Copper Gravel
+dect-coal-gravel=Coal Gravel
 
 [item-description]
 hazard-concrete=Press __CONTROL__rotate__ to rotate painted tiles.
@@ -133,9 +137,9 @@ dect-paint-defect-right=Defect concrete
 dect-paint-operations-left=Operations concrete
 dect-paint-operations-right=Operations concrete
 dect-wood-floor=Wooden floorboards
-dect-gravel=Gravel
-dect-iron-gravel=Iron Gravel
-dect-copper-gravel=Copper Gravel
+dect-stone-gravel=Stone Gravel
+dect-iron-ore-gravel=Iron Gravel
+dect-copper-ore-gravel=Copper Gravel
 dect-coal-gravel=Coal Gravel
 
 [technology-name]
