@@ -4,6 +4,7 @@ Date: 18. 12. 2017
   Added:
     - New warning for incompatibilities when Picker Tweaks mod is installed
   Changed:
+    - Gravel is now a craftable item so as to avoid accidental placement of raw ore on the ground
     - Improved handling when mods add signal colours that may conflict with those already added by Dectorio
     - Improved notifications for conflicting mods with more information on how to resolve the conflict
   Removed:
